--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "dev": "nodemon src/app.js"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1"
   }
 }
